# pdf-rag-parser-lab

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Pipfile  README.md  config.example.yaml  docker-compose.yml  eval_ragas.py  locustfile.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/rules/: code-style.md
app/: config.py  embedding_utils.py  exceptions.py  main.py  pdf_utils.py  supabase_utils.py
app/templates/: index.html
apps/parser-lab-ui/: README.md  app.py
data/: README.md
data/eval/: 2026_youth_allowance_full_candidate_queries.jsonl  2026_youth_allowance_full_labeling_notes.md  2026_youth_allowance_full_relevance.jsonl  2026_youth_allowance_full_verified_queries.jsonl  2026_youth_allowance_pages1_3_queries.jsonl  2026_youth_allowance_pages1_3_relevance.jsonl
experiments/: parser_candidates_verification.md  questions_dataset.md
experiments/parser_comparison/: README.md  config.2026_youth_allowance_full_mineru.yaml  run_experiment.py
experiments/retrieval_eval/: README.md  config.2026_youth_allowance_full_mineru.yaml  config.2026_youth_allowance_full_mineru_reranker.yaml  config.2026_youth_allowance_pages1_3.yaml  run_experiment.py
src/: __init__.py  artifacts.py  cli.py  config_loader.py  schemas.py
tests/: test_artifacts.py  test_chunking_retrieval.py  test_evaluation.py  test_existing_reranker_bridge.py  test_mineru_parser.py  test_opendataloader_parser.py  test_parser_comparison.py  test_pdf_utils.py  test_retrieval_eval.py  test_retriever.py  test_ui_evaluation_helpers.py
(+42 files in other folders)
