[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-rag-parser-lab"
version = "0.1.0"
description = "PDF RAG experiment workbench for parser comparison, chunking, retrieval evaluation, reranker integration, and NDCG measurement."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0,<7.0",
  "streamlit>=1.43,<2.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.10,<25.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<0.12",
]
parsers = [
  "pdfplumber>=0.11,<1.0",
  "pymupdf>=1.25,<2.0",
]
retrieval = [
  "sentence-transformers>=3.4,<4.0",
]
evaluation = [
  "numpy>=2.0,<3.0",
]

[project.scripts]
parser-lab = "src.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
